# pico-tpmsniffer

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  lpc_sniffer.pio  main-spi.c  main.c  spi_bios_sniffer.pio  spi_sniffer.pio
hardware/: tpmsniffer.kicad_pcb  tpmsniffer.kicad_prl  tpmsniffer.kicad_pro  tpmsniffer.kicad_sch
